# uma-race-overlay

./: .gitignore  LICENSE  README.md  uma-race-overlay for website.html
docs/: TODO_калибровка_винрейта.md  WINRATE_MODEL.md  АРХИВ_ГОНОК.md  БЛОК-АНАЛИЗ_ПРОДОЛЖЕНИЕ.md  КАРТА_ГОНКИ_РЕПЛЕЙ.md  КУРС_АВТОДЕТЕКТ_ПРОДОЛЖЕНИЕ.md  ЛОГИКА_ВИНРЕЙТА.md  МАСТЕР-ДОКУМЕНТ.md  РАЗБОР_БЛОКА_И_ПОРТРЕТЫ.md  ФИДБЭК_И_ЗАЩИТА.md  правила_гонки.txt
docs/samples/: race_2026-06-15_18horse.json  race_last_bourbon.json
feedback-relay/: README.md  worker.js  wrangler.toml
uma-race-overlay/: Cargo.toml  README.md
uma-race-overlay-app/: Cargo.toml  build.rs
uma-race-overlay-app/src/: course.rs  feedback.rs  gamedata.rs  main.rs  replay.rs  sim.rs  theme.rs
uma-race-overlay/src/: archive.rs  frames.rs  hooks.rs  il2cpp.rs  lib.rs  logger.rs  state.rs  writer.rs
